# nmf-python

./: pyproject.toml  setup.py
nonnegfac.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
